packages/flutter/lib/flutter_breez_liquid_bindings_generated.dart


  void uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_register_webhook(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer webhook_url,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_register_webhook(
      ptr,
      webhook_url,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_register_webhookPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_register_webhook');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_register_webhook =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_register_webhookPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>();

  void uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_remove_event_listener(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer id,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_remove_event_listener(
      ptr,
      id,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_remove_event_listenerPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_remove_event_listener');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_remove_event_listener =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_remove_event_listenerPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>();

  void uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_rescan_onchain_swaps(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_rescan_onchain_swaps(
      ptr,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_rescan_onchain_swapsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
          'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_rescan_onchain_swaps');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_rescan_onchain_swaps =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_rescan_onchain_swapsPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_restore(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer req,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_restore(
      ptr,
      req,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_restorePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_restore');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_restore =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_restorePtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_send_payment(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer req,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_send_payment(
      ptr,
      req,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_send_paymentPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_send_payment');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_send_payment =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_send_paymentPtr
          .asFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_sign_message(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer req,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_sign_message(
      ptr,
      req,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_sign_messagePtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_sign_message');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_sign_message =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_sign_messagePtr
          .asFunction<RustBuffer Function(ffi.Pointer<ffi.Void>, RustBuffer, ffi.Pointer<RustCallStatus>)>();

  void uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_sync(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_sync(
      ptr,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_syncPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
          'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_sync');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_sync =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_syncPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_unregister_webhook(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_unregister_webhook(
      ptr,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_unregister_webhookPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
          'uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_unregister_webhook');
  late final _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_unregister_webhook =
      _uniffi_breez_sdk_liquid_bindings_fn_method_bindingliquidsdk_unregister_webhookPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void uniffi_breez_sdk_liquid_bindings_fn_init_callback_eventlistener(
    ForeignCallback callback_stub,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_init_callback_eventlistener(
      callback_stub,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_init_callback_eventlistenerPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ForeignCallback, ffi.Pointer<RustCallStatus>)>>(
          'uniffi_breez_sdk_liquid_bindings_fn_init_callback_eventlistener');
  late final _uniffi_breez_sdk_liquid_bindings_fn_init_callback_eventlistener =
      _uniffi_breez_sdk_liquid_bindings_fn_init_callback_eventlistenerPtr
          .asFunction<void Function(ForeignCallback, ffi.Pointer<RustCallStatus>)>();

  void uniffi_breez_sdk_liquid_bindings_fn_init_callback_logger(
    ForeignCallback callback_stub,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_init_callback_logger(
      callback_stub,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_init_callback_loggerPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ForeignCallback, ffi.Pointer<RustCallStatus>)>>(
          'uniffi_breez_sdk_liquid_bindings_fn_init_callback_logger');
  late final _uniffi_breez_sdk_liquid_bindings_fn_init_callback_logger =
      _uniffi_breez_sdk_liquid_bindings_fn_init_callback_loggerPtr
          .asFunction<void Function(ForeignCallback, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_breez_sdk_liquid_bindings_fn_func_connect(
    RustBuffer req,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_func_connect(
      req,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_func_connectPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function(RustBuffer, ffi.Pointer<RustCallStatus>)>>(
          'uniffi_breez_sdk_liquid_bindings_fn_func_connect');
  late final _uniffi_breez_sdk_liquid_bindings_fn_func_connect =
      _uniffi_breez_sdk_liquid_bindings_fn_func_connectPtr
          .asFunction<ffi.Pointer<ffi.Void> Function(RustBuffer, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_func_default_config(
    RustBuffer network,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_func_default_config(
      network,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_func_default_configPtr =
      _lookup<ffi.NativeFunction<RustBuffer Function(RustBuffer, ffi.Pointer<RustCallStatus>)>>(
          'uniffi_breez_sdk_liquid_bindings_fn_func_default_config');
  late final _uniffi_breez_sdk_liquid_bindings_fn_func_default_config =
      _uniffi_breez_sdk_liquid_bindings_fn_func_default_configPtr
          .asFunction<RustBuffer Function(RustBuffer, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_func_parse(
    RustBuffer input,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_func_parse(
      input,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_func_parsePtr =
      _lookup<ffi.NativeFunction<RustBuffer Function(RustBuffer, ffi.Pointer<RustCallStatus>)>>(
          'uniffi_breez_sdk_liquid_bindings_fn_func_parse');
  late final _uniffi_breez_sdk_liquid_bindings_fn_func_parse =
      _uniffi_breez_sdk_liquid_bindings_fn_func_parsePtr
          .asFunction<RustBuffer Function(RustBuffer, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_breez_sdk_liquid_bindings_fn_func_parse_invoice(
    RustBuffer input,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_func_parse_invoice(
      input,
      out_status,
    );
  }

  late final _uniffi_breez_sdk_liquid_bindings_fn_func_parse_invoicePtr =
      _lookup<ffi.NativeFunction<RustBuffer Function(RustBuffer, ffi.Pointer<RustCallStatus>)>>(
          'uniffi_breez_sdk_liquid_bindings_fn_func_parse_invoice');
  late final _uniffi_breez_sdk_liquid_bindings_fn_func_parse_invoice =
      _uniffi_breez_sdk_liquid_bindings_fn_func_parse_invoicePtr
          .asFunction<RustBuffer Function(RustBuffer, ffi.Pointer<RustCallStatus>)>();

  void uniffi_breez_sdk_liquid_bindings_fn_func_set_logger(
    int logger,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_breez_sdk_liquid_bindings_fn_func_set_logger(
      logger,
      out_status,
    );
  }
